# TomeKeeper

./: .gitignore  DEPLOY_PROMPT.md  README.md  calendar-preview.html  deploy.sh  render.yaml
.github/workflows/: deploy-pages.yml
backend/: .env.example  .gitignore  pyproject.toml
backend/migrations/: add_preorders_and_flash_sales.sql  add_rls_policies.sql  add_subscription_watch_cron.sql  add_subscriptions.sql
backend/scripts/: bootstrap_janelle.py
backend/tomekeeper/: __init__.py  config.py  deps.py  main.py  supabase_client.py
backend/tomekeeper/models/: __init__.py  calendar_event.py  edition.py  flash_sale.py  forwarded_email.py  library_entry.py  order.py  work.py
backend/tomekeeper/routers/: __init__.py  calendar.py  editions.py  flash_sales.py  forwarded_emails.py  library_entries.py  orders.py  works.py
backend/tomekeeper/services/: __init__.py  calendar.py  editions.py  flash_sales.py  forwarded_emails.py  library_entries.py  orders.py  works.py
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.js  App.tsx  index.css
frontend/src/components/: AuthGate.js  AuthGate.tsx  CalendarSubscribe.tsx  Layout.js  Layout.tsx  Login.js  Login.tsx  PhotoCaptureButton.tsx  ProcessingBanner.tsx  QRScanButton.tsx
frontend/src/lib/: api.js  api.ts  assistant.ts  auth.js  auth.tsx  imageResize.ts  isbnLookup.ts  selectedDayContext.tsx  supabase.js  supabase.ts  types.js  types.ts
frontend/src/pages/: Assistant.tsx  Capture.js  Capture.tsx  EditionDetail.js  FlashSales.tsx  (+7 more)
(+16 files in other folders)
